fix: small fix to one of the responses
